atualizando os textos

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <header class="cabecalho">
       <nav class="cabecalho__menu">
         <a class="cabecalho__menu__link" href="index.html">Home</a>
-        <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
+        <a class="cabecalho__menu__link" href="about.html">Sobre</a>
         <a class="cabecalho__menu__link" href="resume.html">Currículo</a>
       </nav>
     </header>
@@ -19,23 +19,22 @@
       <section class="apresentacao__conteudo">
         <h1 class="apresentacao__conteudo__titulo">Sobre mim</h1>
         <p class="apresentacao__conteudo__paragrafo">
-          At vero eos et accusamus et iusto odio dignissimos ducimus qui
-          blanditiis praesentium voluptatum deleniti atque corrupti quos dolores
-          et quas molestias excepturi sint occaecati cupiditate non provident,
-          similique sunt in culpa qui officia deserunt mollitia animi, id est
-          laborum et dolorum fuga.
+          Sou formado em gastronomia e atualmente estou me desafiando na área na
+          tecnologia.
         </p>
         <p class="apresentacao__conteudo__paragrafo">
-          Et harum quidem rerum facilis est et expedita distinctio. Nam libero
-          tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo
-          minus id quod maxime placeat facere possimus, omnis voluptas assumenda
-          est, omnis dolor repellendus. Temporibus autem quibusdam et aut
-          officiis debitis aut rerum necessitatibus saepe eveniet ut et
-          voluptates repudiandae sint et molestiae non recusandae. Itaque earum
-          rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus
-          maiores alias consequatur aut perferendis doloribus asperiores ipsum
-          delis forum birol parela maxime infena. Excepteur sint occaecat
-          cupidatat non.
+          Ao longo de toda minha jornada trabalhei em muitas áreas, desde
+          auxiliar em uma fábrica de plástico até produção de conteúdo nas redes
+          sociais. Durante boa parte desse caminho tive que tomar decisões e
+          criar estratégias para que os resultados fossem atingidos, muito
+          estudo foi envolvido e vontade de fazer acontecer também.
+        </p>
+        <p class="apresentacao__conteudo__paragrafo">
+          Na área da tecnologia isso não será diferente, estou estudando muito
+          para que eu consiga me estruturar como Full Stack, apesar de ter
+          criado um carinho muito grande pelo Front-end. Com esse objetivo estou
+          sempre em busca de desafios e cursos que me ofereçam um crescimento
+          pessoal e profissional.
         </p>
       </section>
       <img
