--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="cabecalho">
       <nav class="cabecalho__menu">
         <a class="cabecalho__menu__link" href="index.html">Home</a>
-        <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
+        <a class="cabecalho__menu__link" href="about.html">Sobre</a>
         <a class="cabecalho__menu__link" href="resume.html">Currículo</a>
       </nav>
     </header>
@@ -23,9 +23,10 @@
           >
         </h1>
         <p class="apresentacao__conteudo__paragrafo">
-          Olá! Sou Rafael Frazatto, desenvolvedor Front-end. Ajudo pequenos
-          negócios e designers a colocarem em prática boas ideias. Vamos
-          conversar?
+          Olá! Sou Rafael Frazatto, estudante de Front-end. Estou aprimorando
+          meus conhecimentos em HTML, CSS e JavaScript. Para isso estou
+          desenvolvendo projetos criatívos e funcionais para meu portfólio.
+          Vamos conversar?
         </p>
         <div class="apresentacao__conteudo__links">
           <h2 class="apresentacao__conteudo__links__subtitulo">
