atualizando os icones com ionicons

--- a/index.html
+++ b/index.html
@@ -37,21 +37,19 @@
             href="https://github.com/rafaelfrazatto"
             target="_blank"
           >
-            <img src="./assets/github.png" alt="Logo do GitHub" />GitHub</a
+            <ion-icon name="logo-github"></ion-icon>GitHub</a
           >
           <a
             class="apresentacao__conteudo__links__navegacao"
             href="https://www.linkedin.com/in/rafaelfrazatto"
             target="_blank"
-            ><img src="./assets/linkedin.png" alt="Logo do Linkedin" />
-            Linkedin</a
+            ><ion-icon name="logo-linkedin"></ion-icon>Linkedin</a
           >
           <a
             class="apresentacao__conteudo__links__navegacao"
             href="https://www.instagram.com/rafaelfrazatto/"
             target="_blank"
-            ><img src="./assets/instagram.png" alt="Logo do Instagram" />
-            Instagram</a
+            ><ion-icon name="logo-instagram"></ion-icon>Instagram</a
           >
         </div>
       </section>
@@ -65,5 +63,13 @@
     <footer class="rodape">
       <p>Desenvolvido por Rafael Frazatto.</p>
     </footer>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
   </body>
 </html>
