atualizando a foto, cabeçalho, texto em "resume", cores tema, rodapé, padding dos textos e arrumando o hover no css

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
   <body>
     <header class="cabecalho">
       <nav class="cabecalho__menu">
-        <a class="cabecalho__menu__link" href="index.html">Home</a>
+        <a class="cabecalho__menu__link" href="index.html">Início</a>
         <a class="cabecalho__menu__link" href="about.html">Sobre</a>
         <a class="cabecalho__menu__link" href="resume.html">Currículo</a>
       </nav>
@@ -39,7 +39,7 @@
       </section>
       <img
         class="apresentacao__foto"
-        src="./assets/foto_perfil-removebg-preview.png"
+        src="./assets/foto-perfil-pb.png"
         alt="Foto do Rafael Frazatto sorrindo."
       />
     </main>
