--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home | Rafael Frazatto</title>
+    <title>Início | Rafael Frazatto</title>
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
     <header class="cabecalho">
       <nav class="cabecalho__menu">
-        <a class="cabecalho__menu__link" href="index.html">Home</a>
+        <a class="cabecalho__menu__link" href="index.html">Início</a>
         <a class="cabecalho__menu__link" href="about.html">Sobre</a>
         <a class="cabecalho__menu__link" href="resume.html">Currículo</a>
       </nav>
@@ -55,9 +55,8 @@
       </section>
       <img
         class="apresentacao__foto"
-        src="./assets/foto_perfil-removebg-preview.png"
+        src="./assets/foto-perfil-pb.png"
         alt="Foto do Rafael Frazatto sorrindo."
-        width="400"
       />
     </main>
     <footer class="rodape">
