--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@
   <body>
     <header class="cabecalho">
       <nav class="cabecalho__menu">
-        <a class="cabecalho__menu__link" href="index.html">Home</a>
+        <a class="cabecalho__menu__link" href="index.html">Início</a>
         <a class="cabecalho__menu__link" href="about.html">Sobre</a>
         <a class="cabecalho__menu__link" href="resume.html">Currículo</a>
       </nav>
@@ -34,9 +34,9 @@
             YouTube.
           </li>
           <li class="apresentacao__conteudo__paragrafo">
-            IBGE (2022 - 2023) - Agente Censitário Supervisor com objetivo de
-            retratar a realidade do Brasil com base em coleta de dados e
-            supervisão de recenseadores.
+            IBGE (2022 - 2023) - Agente Censitário Supervisor seguindo o
+            objetivo de retratar a realidade do Brasil. Supervisão de
+            recenseadores e realização coleta e analise de dados.
           </li>
         </ul>
         <h1 class="apresentacao__conteudo__titulo">Cursos</h1>
@@ -58,7 +58,7 @@
       </section>
       <img
         class="apresentacao__foto"
-        src="./assets/foto_perfil-removebg-preview.png"
+        src="./assets/foto-perfil-pb.png"
         alt="Foto do Rafael Frazatto sorrindo."
         width="400"
       />
